--- a/app/src/main/res/layout/activity_treinamentos.xml
+++ b/app/src/main/res/layout/activity_treinamentos.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EstadosActivity">
+    tools:context=".TreinamentosActivity">
 
-    <ListView
-        android:id="@+id/lv_estados"
+    <TextView
+        android:id="@+id/tv_treinamentos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
