Incluindo activity de cursos

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -56,6 +56,13 @@
         android:text="Listar usuarios" />
 
     <Button
+        android:id="@+id/btn_cursos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:text="Listar cursos" />
+
+    <Button
         android:id="@+id/btn_sair"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
