--- a/app/src/main/res/layout/activity_treinamentos.xml
+++ b/app/src/main/res/layout/activity_treinamentos.xml
@@ -38,7 +38,6 @@
             app:srcCompat="@android:drawable/ic_media_pause" />
 
 
-
     </LinearLayout>
 
     <RelativeLayout
@@ -46,22 +45,22 @@
         android:layout_height="match_parent">
 
         <VideoView
+            android:id="@+id/vv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:id="@+id/vv"/>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true" />
 
         <ProgressBar
+            android:id="@+id/progrss"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:id="@+id/progrss"
-            android:visibility="gone"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
